# hooktrace

./: .gitignore  LICENSE
docs/: design.md  usage.md
example/: .gitignore
example/read_link/: Cargo.toml
example/read_link/src/: lib.rs
hooktracer-macro/: Cargo.toml
hooktracer-macro/src/: lib.rs
